fully revised per cloud document

--- a/who-is-healthy-anyways.qmd
+++ b/who-is-healthy-anyways.qmd
@@ -595,37 +595,31 @@ In females, excluding those with unfavorable SDoH reduced the racial gap in FEV1
 
 #### Country of Birth
 
-After excluding those with unfavorable SDoH, the racial gap in FEV1 and FVC was reduced by 24% and 25% in US-born youth, and 35% and 23% in US-born adults (Figure S4). Black and White individuals born outside of the US had higher FEV1 and FVC were less exposed to second-hand and maternal smoking, reported healthier diets, but also had more occupational exposures (Table S2). Black individuals born out of the US had higher income and were more likely to be covered by health insurance than US-born Black individuals while among White participants, those who were born in the US had higher income and higher insurance coverage (Table S2).
+After excluding those with unfavorable SDoH, the racial gap in FEV1 and FVC was reduced by 24% and 25% in US-born youth, and 35% and 23% in US-born adults (@suppfig-usborn). Black and White individuals born outside of the US had higher FEV1 and FVC were less exposed to second-hand and maternal smoking, reported healthier diets, but also had more occupational exposures (@supptab-fig1byusborn). Black individuals born out of the US had higher income and were more likely to be covered by health insurance than US-born Black individuals while among White participants, those who were born in the US had higher income and higher insurance coverage (@supptab-fig1byusborn).
 
-We also explored the intersection of self-identified race and country of birth. After excluding those with various social and environmental exposures, the racial gap in FEV~1~ and FVC was reduced by 24% and 25% in US-born youth, and by 35% and 23% in US-born adults (@suppfig-usborn). Black and White individuals born outside of the US had higher FEV~1~ and FVC, were less exposed to second-hand and maternal smoking, had healthier diets, but also had more occupational exposures (@supptab-fig1byusborn). Black individuals born out of the US had higher income and were more likely to be covered by health insurance than US-born Black individuals while among White participants, those who were born in the US had higher income and higher insurance coverage (@supptab-fig1byusborn).
+#### **Allostatic Load**
+
+Among self-identified Black and White participants, the allostatic load score ranged from 0 to 8. Excluding participants who had an allostatic load score of 1 or higher reduced the racial gap in FEV~1~ and FVC by 11% and 8 % in youths and by 21% and 15% in adults.
 
 #### Leave-one-out Analysis
 
-In the leave-one-out analysis for the youth, the proportion of racial gap explained by SDoH remained consistent at 25% for FEV~1~ and 26% for FVC. In the leave-one-out analysis for adults, the proportion of racial gap explained by SDoH was consistently 26% for FEV~1~ and 19% for FVC, except for when diet health was not accounted for, in which case the proportion of racial gaps explained by SDoH was 29% for FEV1 and 18% for FVC. Further details are provided in the supplement (@suppfig-leavejob to @suppfig-leavediet).
+In the leave-one-out analysis for the youths, the proportion of the racial gap explained by SDoH remained consistent at 25% for FEV~1~ and 26% for FVC. In the leave-one-out analysis for adults, the proportion of racial gaps explained by SDoH was consistently 26% for FEV~1~ and 19% for FVC, except for when diet health was not accounted for, in which case the proportion of racial gaps explained by SDoH was 29% for FEV1 and 18% for FVC. Further details are provided in the supplement (@suppfig-leavejob to @suppfig-leavediet).
 
 ## Discussion
 
 Our understanding of the contribution of environmental and social factors to racial differences in lung function remains limited. A 2022 systematic review found two representative studies in the US population[@holland2022], one focused on adults[@harik-khan2001] and one on children[@harik-khan2004]. The study on adults attributed 35-39% of the racial gap in lung function to sitting height, 2.5-7.5% to poverty, and 2.0-4.7% to education [@harik-khan2001]. In children, sitting height accounted for 42-53% of the racial gap, while diet and socio-economic status accounted for 7-10% of the racial differences [@harik-khan2004]. However, these studies were limited, as they only considered lung function disparities between Black and White individuals, evaluated a narrow set of SDoH (typically comprised of poverty index, BMI, education, employment, and household size), and used older US National Health and Nutrition Examination Survey (NHANES) III survey data (1988–1994).
 
-Our results show that a higher than previously reported proportion of racial differences in lung function between Black and White Americans can be explained by differences in SDoH [@harik-khan2001; @harik-khan2004]. Within studied SDoH variables in NHANES 2007-2012, we were able to explain 26% of the racial gap in lung function in adults, and as much as 35% of the gap in males under 20 years of age. The true contribution of SDoH to racial gaps in lung function is likely higher, as only some aspects of SDoH are properly captured in NHANES. The difficulty of measuring SDoH and our incomplete and evolving understanding of the complex interplay between racism, social, and environmental factors suggest that what we see might just be the tip of the iceberg.
+Our results show that a higher than previously reported proportion of racial differences in lung function between Black and White Americans can be explained by differences in SDoH [@harik-khan2001; @harik-khan2004]. Within studied SDoH variables in NHANES 2007-2012, we were able to explain 26% of the racial gap in lung function in adults, and as much as 35% of the gap in males under 20 years of age. The true contribution of SDoH to racial gaps in lung function is likely higher, as only some aspects of SDoH are properly captured in NHANES.
 
-Our results are consistent with a growing body of literature that implicates historical and structural inequities in perpetuating health disparities among racialized communities [@nardone2020; @schuyler2022; @gaffney2021; @levy2018]. However, considerable variability exists within race categories. We observed a higher explained proportion of the racial gap in lung function among US-born Black and White individuals (i.e., up to 36% of the racial gap in adult FEV~1~ explained by the studied exposures). This might be related to US-specific systemic factors such as the enduring impact of slavery, segregation, redlining, and other inequities and injustices may have a more pronounced effect on lung health for those born in the US. This is supported by studies reporting significantly higher levels of allostatic load, hypertension, and mortality risk among US-born self-identified Black individuals compared to Black immigrants [@doamekpor2015; @brown2017; @Singh2001] and among Black people born in different parts of the US [@Fang1996]. It is important to note that many immigrants may arrive at a young age and experience prolonged exposure to these same systemic factors; however, the generational effects and specific historical context faced by US-born individuals could lead to distinct health outcomes observed at an aggregate level.
-
-Our exploratory analysis also revealed that occupational exposures, obesity, and non-home ownership were the three exclusion criteria most responsible for explaining the racial gap in lung function between Black and White individuals.
+Our results are consistent with a growing body of literature that implicates historical and structural inequities in perpetuating health disparities among racialized communities [@nardone2020; @schuyler2022; @gaffney2021; @levy2018]. However, considerable variability exists within race categories. Controlling for the same SDoH factors reduced the racial gap more among US-born Black and White individuals (i.e., up to 36% of the racial gap in adult FEV~1~ explained by the studied exposures). Other studies have reported higher levels of allostatic load, hypertension, and mortality risk among US-born self-identified Black individuals compared to Black immigrants [@doamekpor2015; @brown2017; @Singh2001] and among Black people born in different parts of the US [@Fang1996].
 
 Similar to the reference populations used to develop lung function reference equations, our baseline reference population only excluded individuals with a history of smoking, lung disease, or respiratory symptoms. In this population, age-, sex-, and height-adjusted FEV~1~ and FVC were highest for Mexican Americans, followed by Non-Hispanic White, Other Hispanic, Asian, and Non-Hispanic Black populations. Introducing nine additional exclusion criteria to reference populations reduced racial disparities in lung function between Black and White individuals, but not for Asian population. Of note, the proportion of Asian people in the successive reference populations remained within 1% of the baseline value, indicating that the investigated SDoH did not disproportionately affect this population.
 
-What are the implications for lung function reference equations? Since these equations are designed to predict healthy lung function, they need to make an assumption about the nature of racial gaps in lung function, either explicitly or implicitly. For decades, ATS lung function testing guidelines have acknowledged the effects of social and environmental factors on the variability of lung function across populations [@lungfun1991]. However, race-specific lung function reference equations implicitly assumed racial gaps in lung function were normal and benign, the same way that differences based on biological sex at birth, height, and age, were considered normal. This practice was at odds with the recognized role of SDoH, reinforced inequities not just by perpetuating the notion of race as a biological determinant, but also by failing to account for the fact that at least some of the observed racial gap may be pathological, due to injury or suboptimal development caused by SDoH. In 2023, the ATS statement on race and ethnicity in pulmonary function testing advocated for a significant shift in practice. The statement acknowledged the importance and complexity of these exposures, rejected fixed differences between races, and embraced a more uncertain race-averaged reference equation, instead of the misleading statistical accuracy of the previous race-based equations [@bhakta2023].
+Developing fair, and practical lung function reference equations is challenging because of our limited understanding of complex exposures, lack of good representative data, and diverse applications of pulmonary function tests [@adibi; @diao2024]. Recognizing the good faith efforts of those working diligently to balance feasibility, practicality, and an ideal accounting for all potential biases, one possbile way forward, at least for some use cases of spirometry, involves explicitly accounting for the effect of complex exposures. This does not require asking patients for their exposure history or social determinants at the point of care and can be achieved by tightening the inclusion criteria in the reference populations at the reference algorithm development stage. Excluding individuals with unfavorable SDoH from reference populations results in a more uniformly healthy reference population across racial identities and makes the dataset less biased. However, this approach may reduce the racial representativeness of the data due to disproportionate exposures. Ensuring a sufficiently large and representative initial sample may allow oversampling to achieve representativeness across all groups.
 
-The newly recommended race-averaged GLI-Global reference equations no longer assume that racial differences in lung function are normal and benign differences. However, do they assume these differences are solely due to disproportionate environmental exposures and SDoH? The answer seems to be no, as GLI-Global equations use averages of four race-specific reference lung function projections, as opposed to projecting the highest race-specific value for all [@bowerman2023].
+Proposals for developing lung function standards using data from participants of "middle-class origin who live and work in clean environments" have appeared in the literature as early as 1984 [@Myers1984]. Another example is the World Health Organization’s (WHO) birth to 2-year growth standards, which recruited participants with favorable SDoH to establish ideal growth patterns[@mercedes2004].
 
-Developing unbiased, fair, and practical lung function reference equations is challenging because of our limited understanding of complex exposures, lack of good representative data, and diverse applications of pulmonary function tests [@adibi; @diao2024]. Recognizing the good faith efforts of those working diligently to find a balance between feasibility, practicality, and an ideal accounting for all potential biases, one potential way forward, at least for some use cases of spirometry, involves explicitly accounting for effect of complex exposures. This does not require asking patients for their exposure history or social determinants at the point of care and can be achieved by tightening the inclusion criteria in the reference populations at the reference algorithm development stage. Excluding individuals with unfavorable SDoH from reference populations results in a more uniformly healthy reference population across racial identities and makes the dataset less biased. However, this approach may reduce the racial representativeness of the data due to disproportionate exposures. Ensuring a sufficiently large and representative initial sample may allow oversampling to achieve representativeness across all groups.
-
-Proposals for developing lung function standards using data from participants of "middle-class origin who live and work in clean environments" have appeared in the literature as early as 1984 [@Myers1984]. There is also precedence for choosing reference populations based on favourable SDoH outside of lung function testing. One prominent example is the World Health Organization (WHO) Multicentre Growth Reference Study that was conducted to create birth to 2-years growth standards [@mercedes2004]. The study's sites were chosen through a meticulous process that took into account geographical and ethnic representativeness, and included affluent communities in the cities of New Delhi and Accra, as well as participants from Muscat, Oslo, Davis, and Pelotas. The eligibility criteria for individual mother and children included no health, environmental, and economic constraints on growth, mother's willingness to follow WHO feeding recommendations, among others [@mercedes2004].
-
-Our study highlights the necessity for further research to understand the interplay between SDoH, environmental exposures, and lung function across different populations. Future studies should aim to incorporate a wider array of SDoH, such as stress levels, neighborhood safety, and intergenerational effects, including those related to wealth, social status, poverty, and trauma. There is also a need for longitudinal studies that can elucidate the emergence of lung function disparities (as has been done in childhood asthma[@Gaffney2024]), associated causal pathways ,and the potential impact of policy changes on reducing health disparities. Exploring the intersectionality of race and other demographic factors could provide a more nuanced understanding of how diverse identities influence lung health outcomes. Expanding research to include international cohorts with high quality data collection could enhance the generalizability of findings and support the development of global and localized strategies to address lung health disparities.
-
-Certain limitations must be acknowledged. Our reliance on NHANES data restricts generalizability beyond the United States and hinders our ability to explore nuanced race and ethnicity groups. We were not able to assess potential role of altitude and anthropometric differences, including those related to torso and leg length due to unavailability of the data in the studied NHANES cycles. Incomplete understanding and limited nature of available data also limits our assessment of complex social and environmental exposures and identities, such as effects of racism, intergenerational effects, life-course exposure to pollutants, gender identity, stress, and allostatic load.
+Our reliance on NHANES data restricts generalizability beyond the United States and hinders our ability to explore nuanced race and ethnicity groups. We could not assess the potential role of altitude and anthropometric differences due to the unavailability of the data in the studied NHANES cycles. Incomplete understanding and the limited nature of available data also limits our assessment of complex SDoH, such as the effects of racism, intergenerational effects, and life-course exposure to pollutants. Future studies should aim to incorporate a wider array of SDoH to overcome these limitations. There is a need for longitudinal studies that elucidate the emergence of lung function disparities (as has been done in childhood asthma [@Gaffney2024]) and associated causal pathways. Expanding research to include international cohorts with high-quality data collection could enhance the generalizability of findings and support the development of global and localized strategies to address lung health disparities.
 
 ## Conclusions
 
@@ -850,7 +844,7 @@ flowchart TD
 
 ```{r, warning=FALSE, message=FALSE}
 #| label: fig-popchange
-#| fig-cap: Changes in population composition in successively more restrictive reference populations. Each reference population adds additional exclusion criteria based on social determinants of health. Race and ethnicity groups that experience a decline in their percentage of the population compared to the reference baseline (moving from left to right) are disproportionately affected by social determinants of health that are being considered here. 
+#| fig-cap: Changes in population composition in successively more restrictive reference populations. Each reference population adds additional exclusion criteria based on social determinants of health. Race and ethnicity groups that experience a decline in their percentage of the population compared to the reference baseline (moving from left to right) are disproportionately affected by the social determinants of health that are being considered here. 
 
 
 refs_adult_all_races <- createCohort("adult", includedRace = c(1,2,3,4,5,6,7))
@@ -1165,7 +1159,7 @@ refs_youth_female <- createCohort("youth", sex="female")
 plot_racial_gap_change(refs_adult_female, refs_youth_female, single_sex=TRUE)
 ```
 
-Changes in lung function racial gaps between female Non-Hispanic Black and Non-Hispanic White participants in successively more restrictive reference populations solely based on income to poverty ratio. Lung function differences are adjusted for height, age, and biological sex at birth. Positive values indicate higher lung function in the Non-Hispanic White population.
+Changes in lung function racial gaps between female Non-Hispanic Black and Non-Hispanic White participants in successively more restrictive reference populations solely based on income to poverty ratio. Lung function differences are adjusted for height, and age. Positive values indicate higher lung function in the Non-Hispanic White population.
 :::
 
 ::: {#suppfig-males}
@@ -1177,7 +1171,7 @@ refs_youth_male <- createCohort("youth", sex="male")
 plot_racial_gap_change(refs_adult_male, refs_youth_male, single_sex=TRUE)
 ```
 
-Changes in lung function racial gaps between male Non-Hispanic Black and Non-Hispanic White participants in successively more restrictive reference populations solely based on income to poverty ratio. Lung function differences are adjusted for height, age, and biological sex at birth. Positive values indicate higher lung function in the Non-Hispanic White population.
+Changes in lung function racial gaps between male Non-Hispanic Black and Non-Hispanic White participants in successively more restrictive reference populations solely based on income to poverty ratio. Lung function differences are adjusted for height, and age. Positive values indicate higher lung function in the Non-Hispanic White population.
 :::
 
 ### Intersection of Race and Country of Birth
